- enable user to set custom options / tags - adjust url params when loading options from server - allow user to provide custom value delimiter as option - use node sass as css compiler

--- a/demo/sections/apiAndOptions.html
+++ b/demo/sections/apiAndOptions.html
@@ -43,6 +43,7 @@
                 itemSelectedClass: 'fstSelected',
                 choiceItemClass: 'fstChoiceItem',
                 choiceRemoveClass: 'fstChoiceRemove',
+                userOptionClass: 'fstUserOption',
 
                 resultsContClass: 'fstResults',
                 resultsOpenedClass: 'fstResultsOpened',
@@ -62,6 +63,8 @@
                 clearQueryOnSelect: true,
                 minQueryLength: 1,
                 typeTimeout: 150,
+                userOptionAllowed: false,
+                valueDelimiter: ',',
 
                 parseData: null,
                 onItemSelect: null,
@@ -69,7 +72,8 @@
 
                 placeholder: 'Choose option',
                 searchPlaceholder: 'Search options',
-                noResultsText: 'No results'
+                noResultsText: 'No results',
+                userOptionPrefix: 'Add '
 
             };
         </code></pre>
