Update options to forward "focusFirstItem" to fastsearch engine

--- a/index.html
+++ b/index.html
@@ -835,6 +835,7 @@
                 initialValue: null,
                 clearQueryOnSelect: true,
                 minQueryLength: 1,
+                focusFirstItem: false,
                 typeTimeout: 150,
                 userOptionAllowed: false,
                 valueDelimiter: ',',
