Adjust demo docs and api options

--- a/demo/sections/apiAndOptions.html
+++ b/demo/sections/apiAndOptions.html
@@ -66,10 +66,12 @@
                 typeTimeout: 150,
                 userOptionAllowed: false,
                 valueDelimiter: ',',
+                maxItems: null,
 
                 parseData: null,
                 onItemSelect: null,
                 onItemCreate: null,
+                onMaxItemsReached: null,
 
                 placeholder: 'Choose option',
                 searchPlaceholder: 'Search options',
