- display options as soon as possible when user option input is allowed - allow user to specify if results should be flipped when element is at document end

--- a/demo/sections/apiAndOptions.html
+++ b/demo/sections/apiAndOptions.html
@@ -47,6 +47,7 @@
 
                 resultsContClass: 'fstResults',
                 resultsOpenedClass: 'fstResultsOpened',
+                resultsFlippedClass: 'fstResultsFilpped',
                 groupClass: 'fstGroup',
                 itemClass: 'fstResultItem',
                 groupTitleClass: 'fstGroupTitle',
@@ -63,6 +64,7 @@
                 clearQueryOnSelect: true,
                 minQueryLength: 1,
                 focusFirstItem: false,
+                flipOnBottom: true,
                 typeTimeout: 150,
                 userOptionAllowed: false,
                 valueDelimiter: ',',
