--- a/index.html
+++ b/index.html
@@ -820,6 +820,7 @@
 
                 resultsContClass: 'fstResults',
                 resultsOpenedClass: 'fstResultsOpened',
+                resultsFlippedClass: 'fstResultsFilpped',
                 groupClass: 'fstGroup',
                 itemClass: 'fstResultItem',
                 groupTitleClass: 'fstGroupTitle',
@@ -836,6 +837,7 @@
                 clearQueryOnSelect: true,
                 minQueryLength: 1,
                 focusFirstItem: false,
+                flipOnBottom: true,
                 typeTimeout: 150,
                 userOptionAllowed: false,
                 valueDelimiter: ',',
