Update demo and docs

--- a/demo/snippets/attireFooter.html
+++ b/demo/snippets/attireFooter.html
@@ -1,3 +1,4 @@
+<section class="attireUserRepositories" data-only-with-pages="true" data-user="dbrekalo"></section>
 <footer class="attireFooter">
     <p>This page is built with <a href="http://dbrekalo.github.io/attire/">Attire</a>.</p>
 </footer>
