--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>Fastselect</title>
 <meta name="description" content="Fastselect is lightweight browser plugin for enhanced select elements based on jQuery. Enables fast and sensible UI upgrade of select element with features like option searching and remote dataset loading.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="canonical" href="https://github.com/dbrekalo/fastselect/"/>
 
         <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://rawgit.com/dbrekalo/attire/master/dist/css/build.min.css">
@@ -877,7 +878,8 @@
     <a class="githubRibbon" href="https://github.com/dbrekalo/fastselect">
     <img src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
 </a>
-    <footer class="attireFooter">
+    <section class="attireUserRepositories" data-only-with-pages="true" data-user="dbrekalo"></section>
+<footer class="attireFooter">
     <p>This page is built with <a href="http://dbrekalo.github.io/attire/">Attire</a>.</p>
 </footer>
 
